--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -9,5 +9,14 @@
     "pagination.next": "suivante",
     "no_products_found": "Aucun produit trouvé.",
     "tags_search.label": "Filtrer par tags",
-    "tags_search.placeholder": "Sélectionnez les balises..."
+    "tags_search.placeholder": "Sélectionnez les balises...",
+    "SortPicker.sort.popular": "Popularité",
+    "SortPicker.sort.date": "Date",
+    "SortPicker.sort.alpha": "Alphabétique",
+    "SortPicker.dir.asc.popular": "Le moins populaire",
+    "SortPicker.dir.asc.date": "Du plus ancien au plus récent",
+    "SortPicker.dir.asc.alpha": "Z à A",
+    "SortPicker.dir.desc.popular": "Le plus populaire",
+    "SortPicker.dir.desc.date": "Du plus récent au plus ancien",
+    "SortPicker.dir.desc.alpha": "A à Z"
 }
