move language switcher to header and add whatsapp button

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -18,5 +18,6 @@
     "SortPicker.dir.asc.alpha": "من الياء إلى الألف",
     "SortPicker.dir.desc.popular": "الأكثر شيوعًا",
     "SortPicker.dir.desc.date": "من الأحدث إلى الأقدم",
-    "SortPicker.dir.desc.alpha": "من الألف إلى الياء"
+    "SortPicker.dir.desc.alpha": "من الألف إلى الياء",
+    "nav.contact_us_via":"اتصل بنا عبر"
 }
