--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -18,5 +18,6 @@
     "SortPicker.dir.asc.alpha": "Z à A",
     "SortPicker.dir.desc.popular": "Le plus populaire",
     "SortPicker.dir.desc.date": "Du plus récent au plus ancien",
-    "SortPicker.dir.desc.alpha": "A à Z"
+    "SortPicker.dir.desc.alpha": "A à Z",
+    "nav.contact_us_via": "Contactez-nous via"
 }
