add topBar to Layout

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -19,5 +19,6 @@
     "SortPicker.dir.desc.popular": "الأكثر شيوعًا",
     "SortPicker.dir.desc.date": "من الأحدث إلى الأقدم",
     "SortPicker.dir.desc.alpha": "من الألف إلى الياء",
-    "nav.contact_us_via":"اتصل بنا عبر"
+    "nav.contact_us_via":"اتصل بنا عبر",
+    "TopBar.Orders of 500Dhs+ Get Free Shipping":"طلبيات بقيمة 500 درهم أو أكثر تحصل على شحن مجاني"
 }
