--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -19,5 +19,6 @@
     "SortPicker.dir.desc.popular": "Le plus populaire",
     "SortPicker.dir.desc.date": "Du plus récent au plus ancien",
     "SortPicker.dir.desc.alpha": "A à Z",
-    "nav.contact_us_via": "Contactez-nous via"
+    "nav.contact_us_via": "Contactez-nous via",
+    "TopBar.Orders of 500Dhs+ Get Free Shipping":"Livraison gratuite pour toute commande de 500 Dhs ou plus"
 }
