--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -19,6 +19,57 @@
     "SortPicker.dir.desc.popular": "الأكثر شيوعًا",
     "SortPicker.dir.desc.date": "من الأحدث إلى الأقدم",
     "SortPicker.dir.desc.alpha": "من الألف إلى الياء",
-    "nav.contact_us_via":"اتصل بنا عبر",
-    "TopBar.Orders of 500Dhs+ Get Free Shipping":"طلبيات بقيمة 500 درهم أو أكثر تحصل على شحن مجاني"
+    "nav.contact_us_via": "اتصل بنا عبر",
+    "TopBar.Orders of 500Dhs+ Get Free Shipping": "طلبيات بقيمة 500 درهم أو أكثر تحصل على شحن مجاني",
+    "home.hero_section.discover_whats_in_store": "اكتشف \nما \nفي \nانتظارك",
+    "home.hero_section.start_your_custom_order": "ابدأ \nطلبك \nالمخصص",
+    "home.hero_section.scroll_down": "قم بالتمرير لأسفل",
+    "home.hero_section.to_know_more_about_us": "لتعرف المزيد عنا",
+    "home.about_us.about_us": "معلومات عنا",
+    "home.about_us.tagline_1": "رؤيتك. حبرنا.",
+    "home.about_us.tagline_2": "Under Print.",
+    "home.about_us.description": [
+        "Under Print هو استوديو طباعة مقره العيون، المغرب.",
+        "نحن موجودون لمساعدة العلامات التجارية على الظهور بشكل مميز والتواصل بوضوح.",
+        "منذ البداية، كان تركيزنا على الجودة بلا مساومة، والتسليم في الوقت المحدد، وتحويل أهداف عملائنا إلى واقع من خلال تصميم يتحدث مباشرة إلى جمهورهم."
+    ],
+    "home.about_us.section_title": "ما يميزنا",
+    "home.about_us.highlights": [
+        "جودة ملموسة: أوراق ممتازة، ألوان واضحة، وتشطيبات متينة—لتشعر علامتك التجارية بجودة موازية لمظهرها.",
+        "تسليم موثوق: مواعيد دقيقة تضمن بقاء حملاتك في المسار الصحيح.",
+        "أهدافك أولاً: كل مشروع يبدأ من أهدافك وينتهي بأثر ملموس.",
+        "تصميم يربط: مرئيات قوية وملهمة تستهدف جمهورك وتنقل رسالتك بوضوح."
+    ],
+    "home.why_us.why_us": "لماذا Under Print",
+    "home.why_us.headline": "نساعد علامتك التجارية على أن تكون بارزة، سريعة، وواضحة",
+    "home.why_us.subheadline": "أطلق إمكانيات عملك بتصميم مميز، وطباعة مثالية، ولوازم مكتبية تبقي فريقك في أفضل إنتاجية.",
+    "home.why_us.features": [
+        {
+            "title": "جودة تراها:",
+            "description": "ألوان معايرة، مواد ممتازة، وفحوصات دقيقة في كل عملية."
+        },
+        {
+            "title": "سرعة بلا تنازلات:",
+            "description": "مواعيد تسليم موثوقة وفي وقتها المحدد."
+        },
+        {
+            "title": "نهج يركز على النتائج:",
+            "description": "نبدأ من أهدافك، نستهدف جمهورك، ونصمم لتحقيق التحويل."
+        },
+        {
+            "title": "شريك شامل:",
+            "description": "حلول طباعة بالإضافة إلى المستلزمات، أثاث وإكسسوارات مكتبية، وتقنية وإكسسوارات—كلها مع شريك موثوق."
+        },
+        {
+            "title": "تصميم يربط:",
+            "description": "مرئيات قوية وملهمة توصل رسالتك بوضوح."
+        },
+        {
+            "title": "تسعير وأدلة شفافة:",
+            "description": "لا مفاجآت—عروض أسعار واضحة، براهين قبل الطباعة، وتحديثات استباقية."
+        }
+    ],
+    "home.custom_request.headline": "اطلب عملك الطباعي المخصص!",
+    "home.custom_request.description": "أرسل مواصفاتك (الحجم، الكمية، نوع الورق/التشطيب، الجوانب، التجليد)، الموعد النهائي، موقع التسليم، والميزانية—قم برفع التصميم أو اطلب تنفيذه—وسنقوم بتسليم طباعة عالية الجودة وفي الوقت المحدد من العيون إلى جميع أنحاء المغرب.",
+    "home.custom_request.button": "اطلب الآن!"
 }
