--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -20,5 +20,56 @@
     "SortPicker.dir.desc.date": "Du plus récent au plus ancien",
     "SortPicker.dir.desc.alpha": "A à Z",
     "nav.contact_us_via": "Contactez-nous via",
-    "TopBar.Orders of 500Dhs+ Get Free Shipping":"Livraison gratuite pour toute commande de 500 Dhs ou plus"
+    "TopBar.Orders of 500Dhs+ Get Free Shipping": "Livraison gratuite pour toute commande de 500 Dhs ou plus",
+    "home.hero_section.discover_whats_in_store": "Découvrez \nCe qui \nVous \nAttend",
+    "home.hero_section.start_your_custom_order": "Commencez \nVotre \nCommande \nPersonnalisée",
+    "home.hero_section.scroll_down": "Faites défiler",
+    "home.hero_section.to_know_more_about_us": "pour en savoir plus sur nous",
+    "home.about_us.about_us": "À propos de nous",
+    "home.about_us.tagline_1": "Votre vision. Notre encre.",
+    "home.about_us.tagline_2": "Under Print.",
+    "home.about_us.description": [
+        "Under Print est un studio d'impression basé à Laâyoune, au Maroc.",
+        "Nous existons pour aider les marques à se démarquer et à communiquer clairement.",
+        "Depuis le premier jour, notre priorité est la qualité sans compromis, la livraison ponctuelle, et donner vie aux objectifs de nos clients avec un design qui parle directement à leur audience."
+    ],
+    "home.about_us.section_title": "Ce qui nous distingue",
+    "home.about_us.highlights": [
+        "Une qualité visible : papiers premium, couleurs nettes et finitions durables—pour que votre marque soit aussi agréable à toucher qu'à regarder.",
+        "Une livraison fiable : des délais respectés pour garder vos campagnes sur la bonne voie.",
+        "Vos objectifs avant tout : chaque projet commence par vos besoins et se termine par un impact mesurable.",
+        "Un design qui connecte : des visuels forts et inspirants qui ciblent votre audience et transmettent votre message avec clarté."
+    ],
+    "home.why_us.why_us": "Pourquoi Under Print",
+    "home.why_us.headline": "Nous aidons votre marque à être percutante, rapide et claire",
+    "home.why_us.subheadline": "Libérez le potentiel de votre entreprise avec un design marquant, une impression impeccable, et l'essentiel de bureau pour maintenir vos équipes au meilleur niveau.",
+    "home.why_us.features": [
+        {
+            "title": "Qualité visible :",
+            "description": "Couleurs calibrées, matériaux premium, et contrôles rigoureux sur chaque projet."
+        },
+        {
+            "title": "Rapidité sans compromis :",
+            "description": "Des délais fiables et des livraisons ponctuelles sur lesquelles vous pouvez compter."
+        },
+        {
+            "title": "Esprit orienté résultats :",
+            "description": "Nous commençons par vos objectifs, ciblons votre audience et concevons pour convertir."
+        },
+        {
+            "title": "Partenaire tout-en-un :",
+            "description": "Solutions d'impression, fournitures, mobilier & accessoires de bureau, et technologies—un partenaire de confiance."
+        },
+        {
+            "title": "Design qui connecte :",
+            "description": "Des visuels forts et inspirants qui transmettent votre message clairement."
+        },
+        {
+            "title": "Tarification & épreuves transparentes :",
+            "description": "Pas de surprises—devis clairs, épreuves avant impression et mises à jour proactives."
+        }
+    ],
+    "home.custom_request.headline": "Demandez votre impression personnalisée !",
+    "home.custom_request.description": "Envoyez vos spécifications (taille, quantité, papier/finitions, recto/verso, reliure), délais, lieu de livraison et budget—téléversez vos fichiers ou demandez un design—et nous livrerons une impression premium et ponctuelle depuis Laâyoune dans tout le Maroc.",
+    "home.custom_request.button": "Demander maintenant !"
 }
