--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -71,5 +71,14 @@
     ],
     "home.custom_request.headline": "اطلب عملك الطباعي المخصص!",
     "home.custom_request.description": "أرسل مواصفاتك (الحجم، الكمية، نوع الورق/التشطيب، الجوانب، التجليد)، الموعد النهائي، موقع التسليم، والميزانية—قم برفع التصميم أو اطلب تنفيذه—وسنقوم بتسليم طباعة عالية الجودة وفي الوقت المحدد من العيون إلى جميع أنحاء المغرب.",
-    "home.custom_request.button": "اطلب الآن!"
+    "home.custom_request.button": "اطلب الآن!",
+    "footer": {
+        "description": "أطلق إمكانيات عملك مع حلولنا لوسائل التواصل الاجتماعي",
+        "links": {
+            "about_us": "معلومات عنا",
+            "online_store": "المتجر الإلكتروني",
+            "custom_order": "طلب مخصص"
+        },
+        "copyright": "© 2025 Under Print. جميع الحقوق محفوظة."
+    }
 }
