refactor locale json files

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,77 +1,109 @@
 {
-    "hero.headline": "Buy a product or custom order",
+    "hero": {
+        "headline": "Buy a product or custom order"
+    },
     "products": "Products",
     "custom_order": "Custom Order",
     "order_via_whatsapp": "Order via WhatsApp",
-    "option_picker.choose_an_option": "Choose an option",
-    "option_picker.no_options_available": "No options available",
-    "pagination.previous": "previous",
-    "pagination.next": "next",
+    "option_picker": {
+        "choose_an_option": "Choose an option",
+        "no_options_available": "No options available"
+    },
+    "pagination": {
+        "previous": "previous",
+        "next": "next"
+    },
     "no_products_found": "No products found",
-    "tags_search.label": "Filter by tags",
-    "tags_search.placeholder": "Select tags...",
-    "SortPicker.sort.popular": "Popularity",
-    "SortPicker.sort.date": "Date",
-    "SortPicker.sort.alpha": "Alphabetical",
-    "SortPicker.dir.asc.popular": "Least Popular",
-    "SortPicker.dir.asc.date": "Oldest to Newest",
-    "SortPicker.dir.asc.alpha": "Z to A",
-    "SortPicker.dir.desc.popular": "Most Popular",
-    "SortPicker.dir.desc.date": "Newest to Oldest",
-    "SortPicker.dir.desc.alpha": "A to Z",
-    "nav.contact_us_via": "Contact us via",
-    "TopBar.Orders of 500Dhs+ Get Free Shipping": "Orders of 500Dhs+ Get Free Shipping",
-    "home.hero_section.discover_whats_in_store": "Discover \nWhat's \nin \nStore",
-    "home.hero_section.start_your_custom_order": "Start \nYour \nCustom \nOrder",
-    "home.hero_section.scroll_down": "Scroll down",
-    "home.hero_section.to_know_more_about_us": "to know more about us",
-    "home.about_us.about_us": "About Us",
-    "home.about_us.tagline_1": "Your Vision. Our Ink.",
-    "home.about_us.tagline_2": "Under Print.",
-    "home.about_us.description": [
-        "Under Print is a Laâyoune-based printing studio in Morocco.",
-        "We exist to help brands look sharp and communicate clearly.",
-        "From day one, our focus has been uncompromising quality, on-time delivery, and bringing our clients' objectives to life with design that speaks directly to their audience."
-    ],
-    "home.about_us.section_title": "What sets us apart",
-    "home.about_us.highlights": [
-        "Quality that shows: Premium stocks, sharp color, and durable finishes—so your brand feels as good as it looks.",
-        "Delivery you can count on: Reliable turnaround times to keep your campaigns on schedule.",
-        "Your goals, first: Every project starts with your objectives and ends with measurable impact.",
-        "Design that connects: Strong, inspiring visuals that target your audience and deliver your message with clarity."
-    ],
-    "home.why_us.why_us": "Why Under Print",
-    "home.why_us.headline": "We help your brand look sharp, move fast, and speak clearly",
-    "home.why_us.subheadline": "Unlock your business's potential with standout design, flawless print, and the workplace essentials to keep your team producing at its best.",
-    "home.why_us.features": [
-        {
-            "title": "Quality you can see :",
-            "description": "Calibrated color, premium materials, and rigorous checks on every job."
+    "tags_search": {
+        "label": "Filter by tags",
+        "placeholder": "Select tags..."
+    },
+    "SortPicker": {
+        "sort": {
+            "popular": "Popularity",
+            "date": "Date",
+            "alpha": "Alphabetical"
         },
-        {
-            "title": "Speed without shortcuts :",
-            "description": "Reliable turnarounds and on-time delivery you can plan around."
-        },
-        {
-            "title": "Results-first mindset :",
-            "description": "We start with your objectives, target your audience, and design to convert."
-        },
-        {
-            "title": "All-in-one partner :",
-            "description": "Print solutions plus printing supplies, Office Furniture & Accessories, and Tech & Accessories—one trusted partner."
-        },
-        {
-            "title": "Design that connects :",
-            "description": "Strong, inspiring visuals that deliver your message clearly."
-        },
-        {
-            "title": "Transparent pricing & proofs :",
-            "description": "No surprises—clear quotes, pre-print proofs, and proactive updates."
+        "dir": {
+            "asc": {
+                "popular": "Least Popular",
+                "date": "Oldest to Newest",
+                "alpha": "Z to A"
+            },
+            "desc": {
+                "popular": "Most Popular",
+                "date": "Newest to Oldest",
+                "alpha": "A to Z"
+            }
         }
-    ],
-    "home.custom_request.headline": "Request Your Custom print job !",
-    "home.custom_request.description": "Send your specs (size, quantity, paper/finish, sides, binding), deadline, delivery location, and budget—upload artwork or request design—and we’ll deliver premium, on-time print from Laâyoune across Morocco.",
-    "home.custom_request.button": "Request Now!",
+    },
+    "nav": {
+        "contact_us_via": "Contact us via"
+    },
+    "TopBar": {
+        "Orders of 500Dhs+ Get Free Shipping": "Orders of 500Dhs+ Get Free Shipping"
+    },
+    "home": {
+        "hero_section": {
+            "discover_whats_in_store": "Discover \nWhat's \nin \nStore",
+            "start_your_custom_order": "Start \nYour \nCustom \nOrder",
+            "scroll_down": "Scroll down",
+            "to_know_more_about_us": "to know more about us"
+        },
+        "about_us": {
+            "about_us": "About Us",
+            "tagline_1": "Your Vision. Our Ink.",
+            "tagline_2": "Under Print.",
+            "description": [
+                "Under Print is a Laâyoune-based printing studio in Morocco.",
+                "We exist to help brands look sharp and communicate clearly.",
+                "From day one, our focus has been uncompromising quality, on-time delivery, and bringing our clients' objectives to life with design that speaks directly to their audience."
+            ],
+            "section_title": "What sets us apart",
+            "highlights": [
+                "Quality that shows: Premium stocks, sharp color, and durable finishes—so your brand feels as good as it looks.",
+                "Delivery you can count on: Reliable turnaround times to keep your campaigns on schedule.",
+                "Your goals, first: Every project starts with your objectives and ends with measurable impact.",
+                "Design that connects: Strong, inspiring visuals that target your audience and deliver your message with clarity."
+            ]
+        },
+        "why_us": {
+            "why_us": "Why Under Print",
+            "headline": "We help your brand look sharp, move fast, and speak clearly",
+            "subheadline": "Unlock your business's potential with standout design, flawless print, and the workplace essentials to keep your team producing at its best.",
+            "features": [
+                {
+                    "title": "Quality you can see :",
+                    "description": "Calibrated color, premium materials, and rigorous checks on every job."
+                },
+                {
+                    "title": "Speed without shortcuts :",
+                    "description": "Reliable turnarounds and on-time delivery you can plan around."
+                },
+                {
+                    "title": "Results-first mindset :",
+                    "description": "We start with your objectives, target your audience, and design to convert."
+                },
+                {
+                    "title": "All-in-one partner :",
+                    "description": "Print solutions plus printing supplies, Office Furniture & Accessories, and Tech & Accessories—one trusted partner."
+                },
+                {
+                    "title": "Design that connects :",
+                    "description": "Strong, inspiring visuals that deliver your message clearly."
+                },
+                {
+                    "title": "Transparent pricing & proofs :",
+                    "description": "No surprises—clear quotes, pre-print proofs, and proactive updates."
+                }
+            ]
+        },
+        "custom_request": {
+            "headline": "Request Your Custom print job !",
+            "description": "Send your specs (size, quantity, paper/finish, sides, binding), deadline, delivery location, and budget—upload artwork or request design—and we’ll deliver premium, on-time print from Laâyoune across Morocco.",
+            "button": "Request Now!"
+        }
+    },
     "footer": {
         "description": "Unlock Your Business's Potential with Our Social Media Solutions",
         "links": {
