--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -1,53 +1,53 @@
 {
     "hero": {
-        "headline": "شراء منتج أو طلب مخصص"
+        "headline": "اشترِ منتجًا أو اطلب حسب الطلب"
     },
-    "products": "منتجات",
+    "products": "المنتجات",
     "custom_order": "طلب مخصص",
-    "order_via_whatsapp": "اطلب عبر الواتساب",
+    "order_via_whatsapp": "اطلب عبر واتساب",
     "option_picker": {
         "choose_an_option": "اختر خيارًا",
         "no_options_available": "لا توجد خيارات متاحة"
     },
     "pagination": {
-        "previous": "الصفحة السابقة",
-        "next": "الصفحة التالية"
+        "previous": "السابق",
+        "next": "التالي"
     },
-    "no_products_found": "لم يتم العثور على أي منتجات.",
+    "no_products_found": "لم يتم العثور على منتجات",
     "tags_search": {
-        "label": "تصفية حسب العلامات",
-        "placeholder": "اختر العلامات..."
+        "label": "تصفية حسب الوسوم",
+        "placeholder": "اختر الوسوم..."
     },
     "SortPicker": {
         "sort": {
-            "popular": "الشعبية",
+            "popular": "الأكثر شعبية",
             "date": "التاريخ",
             "alpha": "أبجدي"
         },
         "dir": {
             "asc": {
-                "popular": "الأقل شيوعًا",
-                "date": "الأقدم إلى الأحدث",
-                "alpha": "من الياء إلى الألف"
+                "popular": "الأقل شعبية",
+                "date": "من الأقدم إلى الأحدث",
+                "alpha": "من ي إلى أ"
             },
             "desc": {
-                "popular": "الأكثر شيوعًا",
+                "popular": "الأكثر شعبية",
                 "date": "من الأحدث إلى الأقدم",
-                "alpha": "من الألف إلى الياء"
+                "alpha": "من أ إلى ي"
             }
         }
     },
     "nav": {
-        "contact_us_via": "اتصل بنا عبر"
+        "contact_us_via": "تواصل معنا عبر"
     },
     "TopBar": {
-        "Orders of 500Dhs+ Get Free Shipping": "طلبيات بقيمة 500 درهم أو أكثر تحصل على شحن مجاني"
+        "Orders of 500Dhs+ Get Free Shipping": "الطلبات التي تتجاوز 500 درهم تحصل على شحن مجاني"
     },
     "home": {
         "hero_section": {
-            "discover_whats_in_store": "اكتشف \nما \nفي \nانتظارك",
+            "discover_whats_in_store": "اكتشف \nما \nفي \nالمتجر",
             "start_your_custom_order": "ابدأ \nطلبك \nالمخصص",
-            "scroll_down": "قم بالتمرير لأسفل",
+            "scroll_down": "مرر للأسفل",
             "to_know_more_about_us": "لتعرف المزيد عنا"
         },
         "about_us": {
@@ -56,56 +56,56 @@
             "tagline_2": "Under Print.",
             "description": [
                 "Under Print هو استوديو طباعة مقره العيون، المغرب.",
-                "نحن موجودون لمساعدة العلامات التجارية على الظهور بشكل مميز والتواصل بوضوح.",
-                "منذ البداية، كان تركيزنا على الجودة بلا مساومة، والتسليم في الوقت المحدد، وتحويل أهداف عملائنا إلى واقع من خلال تصميم يتحدث مباشرة إلى جمهورهم."
+                "نحن موجودون لمساعدة العلامات التجارية على الظهور بوضوح والتواصل بفعالية.",
+                "منذ البداية، كان تركيزنا على الجودة العالية، التسليم في الوقت المحدد، وتحويل أهداف عملائنا إلى واقع بتصاميم تخاطب جمهورهم مباشرة."
             ],
             "section_title": "ما يميزنا",
             "highlights": [
-                "جودة ملموسة: أوراق ممتازة، ألوان واضحة، وتشطيبات متينة—لتشعر علامتك التجارية بجودة موازية لمظهرها.",
-                "تسليم موثوق: مواعيد دقيقة تضمن بقاء حملاتك في المسار الصحيح.",
-                "أهدافك أولاً: كل مشروع يبدأ من أهدافك وينتهي بأثر ملموس.",
-                "تصميم يربط: مرئيات قوية وملهمة تستهدف جمهورك وتنقل رسالتك بوضوح."
+                "جودة واضحة: أوراق ممتازة، ألوان دقيقة، وتشطيبات متينة — ليكون إحساس علامتك التجارية بجودة ما تراه.",
+                "تسليم موثوق: أوقات تسليم مضمونة للحفاظ على حملاتك في الموعد.",
+                "أهدافك أولاً: كل مشروع يبدأ بأهدافك وينتهي بتأثير ملموس.",
+                "تصميم يربط: صور قوية وملهمة تستهدف جمهورك وتنقل رسالتك بوضوح."
             ]
         },
         "why_us": {
             "why_us": "لماذا Under Print",
-            "headline": "نساعد علامتك التجارية على أن تكون بارزة، سريعة، وواضحة",
-            "subheadline": "أطلق إمكانيات عملك بتصميم مميز، وطباعة مثالية، ولوازم مكتبية تبقي فريقك في أفضل إنتاجية.",
+            "headline": "نساعد علامتك التجارية لتكون واضحة، سريعة، وفعالة",
+            "subheadline": "أطلق العنان لإمكانات عملك بتصاميم مميزة، طباعة متقنة، وحلول مكتبية وتقنية تدعم فريقك لتحقيق الأفضل.",
             "features": [
                 {
-                    "title": "جودة تراها:",
-                    "description": "ألوان معايرة، مواد ممتازة، وفحوصات دقيقة في كل عملية."
+                    "title": "جودة يمكنك رؤيتها:",
+                    "description": "ألوان مضبوطة، مواد ممتازة، وفحوص دقيقة على كل عمل."
                 },
                 {
-                    "title": "سرعة بلا تنازلات:",
-                    "description": "مواعيد تسليم موثوقة وفي وقتها المحدد."
+                    "title": "سرعة بدون تنازلات:",
+                    "description": "تسليم موثوق وفي الوقت المحدد."
                 },
                 {
-                    "title": "نهج يركز على النتائج:",
+                    "title": "عقلية موجهة للنتائج:",
                     "description": "نبدأ من أهدافك، نستهدف جمهورك، ونصمم لتحقيق التحويل."
                 },
                 {
                     "title": "شريك شامل:",
-                    "description": "حلول طباعة بالإضافة إلى المستلزمات، أثاث وإكسسوارات مكتبية، وتقنية وإكسسوارات—كلها مع شريك موثوق."
+                    "description": "حلول طباعة + مستلزمات الطباعة، أثاث وإكسسوارات مكتبية، وتقنيات — شريك واحد موثوق."
                 },
                 {
                     "title": "تصميم يربط:",
-                    "description": "مرئيات قوية وملهمة توصل رسالتك بوضوح."
+                    "description": "صور قوية وملهمة تنقل رسالتك بوضوح."
                 },
                 {
-                    "title": "تسعير وأدلة شفافة:",
-                    "description": "لا مفاجآت—عروض أسعار واضحة، براهين قبل الطباعة، وتحديثات استباقية."
+                    "title": "أسعار وبراهين شفافة:",
+                    "description": "لا مفاجآت — عروض أسعار واضحة، براهين قبل الطباعة، وتحديثات استباقية."
                 }
             ]
         },
         "custom_request": {
-            "headline": "اطلب عملك الطباعي المخصص!",
-            "description": "أرسل مواصفاتك (الحجم، الكمية، نوع الورق/التشطيب، الجوانب، التجليد)، الموعد النهائي، موقع التسليم، والميزانية—قم برفع التصميم أو اطلب تنفيذه—وسنقوم بتسليم طباعة عالية الجودة وفي الوقت المحدد من العيون إلى جميع أنحاء المغرب.",
+            "headline": "اطلب طباعة مخصصة الآن!",
+            "description": "أرسل مواصفاتك (الحجم، الكمية، نوع الورق/التشطيب، وجه/وجهين، التجليد)، الموعد النهائي، مكان التسليم، والميزانية — قم برفع التصميم أو اطلب منا التصميم — وسنقدم لك طباعة عالية الجودة وفي الوقت المحدد من العيون إلى جميع أنحاء المغرب.",
             "button": "اطلب الآن!"
         }
     },
     "footer": {
-        "description": "أطلق إمكانيات عملك مع حلولنا لوسائل التواصل الاجتماعي",
+        "description": "أطلق إمكانات عملك مع حلولنا لوسائل التواصل الاجتماعي",
         "links": {
             "about_us": "معلومات عنا",
             "online_store": "المتجر الإلكتروني",
