--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -1,22 +1,22 @@
 {
     "hero": {
-        "headline": "Acheter un produit ou une commande personnalisée"
+        "headline": "Achetez un produit ou une commande personnalisée"
     },
     "products": "Produits",
-    "custom_order": "Commande Personnalisée",
-    "order_via_whatsapp": "Commande via WhatsApp",
+    "custom_order": "Commande personnalisée",
+    "order_via_whatsapp": "Commander via WhatsApp",
     "option_picker": {
         "choose_an_option": "Choisissez une option",
         "no_options_available": "Aucune option disponible"
     },
     "pagination": {
-        "previous": "précédent",
-        "next": "suivante"
+        "previous": "Précédent",
+        "next": "Suivant"
     },
-    "no_products_found": "Aucun produit trouvé.",
+    "no_products_found": "Aucun produit trouvé",
     "tags_search": {
         "label": "Filtrer par tags",
-        "placeholder": "Sélectionnez les balises..."
+        "placeholder": "Sélectionnez des tags..."
     },
     "SortPicker": {
         "sort": {
@@ -26,12 +26,12 @@
         },
         "dir": {
             "asc": {
-                "popular": "Le moins populaire",
+                "popular": "Moins populaire",
                 "date": "Du plus ancien au plus récent",
                 "alpha": "Z à A"
             },
             "desc": {
-                "popular": "Le plus populaire",
+                "popular": "Plus populaire",
                 "date": "Du plus récent au plus ancien",
                 "alpha": "A à Z"
             }
@@ -41,13 +41,13 @@
         "contact_us_via": "Contactez-nous via"
     },
     "TopBar": {
-        "Orders of 500Dhs+ Get Free Shipping": "Livraison gratuite pour toute commande de 500 Dhs ou plus"
+        "Orders of 500Dhs+ Get Free Shipping": "Commandes de 500Dhs+ Livraison gratuite"
     },
     "home": {
         "hero_section": {
-            "discover_whats_in_store": "Découvrez \nCe qui \nVous \nAttend",
+            "discover_whats_in_store": "Découvrez \nCe que nous \nVous \nRéservons",
             "start_your_custom_order": "Commencez \nVotre \nCommande \nPersonnalisée",
-            "scroll_down": "Faites défiler",
+            "scroll_down": "Faites défiler vers le bas",
             "to_know_more_about_us": "pour en savoir plus sur nous"
         },
         "about_us": {
@@ -55,57 +55,57 @@
             "tagline_1": "Votre vision. Notre encre.",
             "tagline_2": "Under Print.",
             "description": [
-                "Under Print est un studio d'impression basé à Laâyoune, au Maroc.",
-                "Nous existons pour aider les marques à se démarquer et à communiquer clairement.",
-                "Depuis le premier jour, notre priorité est la qualité sans compromis, la livraison ponctuelle, et donner vie aux objectifs de nos clients avec un design qui parle directement à leur audience."
+                "Under Print est un studio d’impression basé à Laâyoune, au Maroc.",
+                "Nous existons pour aider les marques à avoir une image nette et à communiquer clairement.",
+                "Depuis le premier jour, notre objectif a été une qualité sans compromis, une livraison ponctuelle et la concrétisation des objectifs de nos clients grâce à un design qui parle directement à leur public."
             ],
             "section_title": "Ce qui nous distingue",
             "highlights": [
-                "Une qualité visible : papiers premium, couleurs nettes et finitions durables—pour que votre marque soit aussi agréable à toucher qu'à regarder.",
-                "Une livraison fiable : des délais respectés pour garder vos campagnes sur la bonne voie.",
-                "Vos objectifs avant tout : chaque projet commence par vos besoins et se termine par un impact mesurable.",
-                "Un design qui connecte : des visuels forts et inspirants qui ciblent votre audience et transmettent votre message avec clarté."
+                "Qualité visible : papiers premium, couleurs nettes et finitions durables — pour que votre marque soit aussi agréable à toucher qu’à voir.",
+                "Livraison fiable : des délais respectés pour garder vos campagnes sur la bonne voie.",
+                "Vos objectifs d’abord : chaque projet commence par vos objectifs et se termine par un impact mesurable.",
+                "Un design qui connecte : des visuels forts et inspirants qui ciblent votre audience et livrent votre message avec clarté."
             ]
         },
         "why_us": {
             "why_us": "Pourquoi Under Print",
-            "headline": "Nous aidons votre marque à être percutante, rapide et claire",
-            "subheadline": "Libérez le potentiel de votre entreprise avec un design marquant, une impression impeccable, et l'essentiel de bureau pour maintenir vos équipes au meilleur niveau.",
+            "headline": "Nous aidons votre marque à être nette, rapide et claire",
+            "subheadline": "Libérez le potentiel de votre entreprise avec un design marquant, une impression impeccable et les essentiels de bureau pour maintenir votre équipe à son meilleur niveau.",
             "features": [
                 {
                     "title": "Qualité visible :",
-                    "description": "Couleurs calibrées, matériaux premium, et contrôles rigoureux sur chaque projet."
+                    "description": "Couleurs calibrées, matériaux premium et contrôles rigoureux sur chaque travail."
                 },
                 {
                     "title": "Rapidité sans compromis :",
-                    "description": "Des délais fiables et des livraisons ponctuelles sur lesquelles vous pouvez compter."
+                    "description": "Délais fiables et livraison ponctuelle."
                 },
                 {
-                    "title": "Esprit orienté résultats :",
+                    "title": "Une approche axée résultats :",
                     "description": "Nous commençons par vos objectifs, ciblons votre audience et concevons pour convertir."
                 },
                 {
                     "title": "Partenaire tout-en-un :",
-                    "description": "Solutions d'impression, fournitures, mobilier & accessoires de bureau, et technologies—un partenaire de confiance."
+                    "description": "Solutions d’impression + fournitures, mobilier de bureau et accessoires tech — un partenaire de confiance."
                 },
                 {
-                    "title": "Design qui connecte :",
-                    "description": "Des visuels forts et inspirants qui transmettent votre message clairement."
+                    "title": "Un design qui connecte :",
+                    "description": "Des visuels forts et inspirants qui livrent votre message clairement."
                 },
                 {
-                    "title": "Tarification & épreuves transparentes :",
-                    "description": "Pas de surprises—devis clairs, épreuves avant impression et mises à jour proactives."
+                    "title": "Prix et épreuves transparents :",
+                    "description": "Pas de surprises — devis clairs, épreuves avant impression et mises à jour proactives."
                 }
             ]
         },
         "custom_request": {
             "headline": "Demandez votre impression personnalisée !",
-            "description": "Envoyez vos spécifications (taille, quantité, papier/finitions, recto/verso, reliure), délais, lieu de livraison et budget—téléversez vos fichiers ou demandez un design—et nous livrerons une impression premium et ponctuelle depuis Laâyoune dans tout le Maroc.",
-            "button": "Demander maintenant !"
+            "description": "Envoyez vos spécifications (taille, quantité, papier/finition, recto/verso, reliure), délai, lieu de livraison et budget — téléchargez vos fichiers ou demandez un design — et nous livrerons une impression premium, ponctuelle, de Laâyoune à tout le Maroc.",
+            "button": "Demandez maintenant !"
         }
     },
     "footer": {
-        "description": "Libérez le potentiel de votre entreprise avec nos solutions de réseaux sociaux",
+        "description": "Libérez le potentiel de votre entreprise avec nos solutions de médias sociaux",
         "links": {
             "about_us": "À propos de nous",
             "online_store": "Boutique en ligne",
