update ShoppingCartSheet translations

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -41,7 +41,7 @@
         "subtotal": "الإجمالي الفرعي",
         "total": "الإجمالي",
         "unit": "{{price}} / وحدة",
-        "checkout": "إتمام الشراء",
+        "checkout": "إتمام الشراء عبر واتساب",
         "clear": "تفريغ",
         "remove": "حذف",
         "items_count_one": "{{count}} منتج",
