update "Name" to "Full name"

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -56,7 +56,7 @@
         "cancel": "إلغاء",
         "title": "معلومات الدفع",
         "description": "يرجى ملء بياناتك للمتابعة مع طلبك.",
-        "name": "الاسم",
+        "name": "الاسم الكامل",
         "address": "العنوان",
         "email": "البريد الإلكتروني (اختياري)"
     },
